style.css
:root {
    --color-light: #F4F7E2;
    --color-one: #CFDAA7;
    --color-two: #A5C09E;
    --color-three: #ACB481;
    --color-dark: #7B9371;

    --font-head: 'Permanent Marker', cursive;
    --font-main: 'Rubik', sans-serif;
    /* font-family: 'Lato', sans-serif; */
}

* {
    box-sizing: border-box;
    
}
body {
    font-family: var(--font-main);
    color: var(--color-dark);
    font-size: 1.3rem;
    background-color: var(--color-one);
}

main{
    display: flex;
    flex-direction: column;
}

header{
    padding: 0 0 0 3rem;
    white-space: nowrap;
    font-family: var(--font-head);
    color: var(--color-light);
    letter-spacing: .5rem;
}

a {
    color: var(--color-three);
}

a:hover{
    opacity: 30%;
    -webkit-animation: rainbow 3s linear; /* Safari 4.0 - 8.0 */
    animation: rainbow 3s linear;
    -webkit-animation-iteration-count: infinite;
    animation-iteration-count: infinite;   
}

div {
    text-align: center;
}

.card {
    background-color: var(--color-light);
    border-radius: 15px;
    box-shadow: 10px 10px 5px var(--color-three);
    min-height: 5rem;
    padding: 1rem;
    margin: 0 1rem 1rem 0;
    width: 20%;
}
.card .tools {
    margin-top: 1rem;
}

#about-me {
    margin: 0 auto;
    width: 85rem;
    max-width: 80%;
}

#works {
    padding: 0 3rem 0 3rem;
}

.projects{
    display: flex;
    flex-direction: row;
    flex-flow: wrap;
    justify-content: center;
}

.card-head {
    display: flex;
    flex-direction: row;
    justify-content: space-between
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (max-width: 991px) {
    .card {
        width: 40%;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (max-width: 767px) {
    .card {
        width: 80%;
    }
    header {
        padding: 0;
    }
}

@media only screen and (max-width: 600px) {
    .card {
        width: 80%;
    }
    header {
        padding: 0;
        letter-spacing: .3rem;
    }
}

/* Safari 4.0 - 8.0 */
@-webkit-keyframes rainbow {
    100%,0%{
        color: rgb(255,0,0);
    }
    8%{
        color: rgb(255,127,0);
    }
    16%{
        color: rgb(255,255,0);
    }
    25%{
        color: rgb(127,255,0);
    }
    33%{
        color: rgb(0,255,0);
    }
    41%{
        color: rgb(0,255,127);
    }
    50%{
        color: rgb(0,255,255);
    }
    58%{
        color: rgb(0,127,255);
    }
    66%{
        color: rgb(0,0,255);
    }
    75%{
        color: rgb(127,0,255);
    }
    83%{
        color: rgb(255,0,255);
    }
    91%{
        color: rgb(255,0,127);
    }
  }
  
  /* Standard syntax */
  @keyframes rainbow {
    100%,0%{
        color: rgb(255,0,0);
    }
    8%{
        color: rgb(255,127,0);
    }
    16%{
        color: rgb(255,255,0);
    }
    25%{
        color: rgb(127,255,0);
    }
    33%{
        color: rgb(0,255,0);
    }
    41%{
        color: rgb(0,255,127);
    }
    50%{
        color: rgb(0,255,255);
    }
    58%{
        color: rgb(0,127,255);
    }
    66%{
        color: rgb(0,0,255);
    }
    75%{
        color: rgb(127,0,255);
    }
    83%{
        color: rgb(255,0,255);
    }
    91%{
        color: rgb(255,0,127);
    }
  }

